<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:orientation="horizontal">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/Person_Change_Monitoring"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Person_change_monitoring" />

            <Button
                android:id="@+id/Get_All_Personnel_Information"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Get_all_personnel_information" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Get_Person_Following_Focus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Get_person_following_focus" />

            <Button
                android:id="@+id/Get_List_People_Detected_Faces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Get_list_people_detected_faces" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Get_List_People_Detected_Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Get_list_people_detected_body" />

            <Button
                android:id="@+id/Get_List_People_Detected_Complete_Faces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Get_list_people_detected_complete_faces" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/start_follow_focus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_follow_focus" />

            <Button
                android:id="@+id/stop_follow_focus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop_follow_focus" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>