<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/mainlaout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/speech_scene"
                android:layout_width="174dp"
                android:layout_height="42dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/speech_ability"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/lead_scene"
                android:layout_width="164dp"
                android:layout_height="42dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/lead_text"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/sport_scene"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/basic_sport"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/location_scene"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/map_location_text"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/vision_scene"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/visual_ability"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/charge_scene"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/charge_text"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/activePerson_scen"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/active_person"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/navigation_scene"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/navigation"
                android:textColor="#FFFFFF" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">


            <Button
                android:id="@+id/home_scene"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/home"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/cruise_scene"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/cruise"
                android:textColor="#FFFFFF" />

        </TableRow>
    </TableLayout>

</LinearLayout>
