<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_navigation_point"
            android:layout_width="180dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/lead_hint_point" />

        <Button
            android:id="@+id/start_navigation"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/navigation" />

        <Button
            android:id="@+id/stop_navigation"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginLeft="8dp"
            android:text="@string/navigation_stop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/turn_direction"
            style="@style/TextStyle"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/navigation_resume_direction" />

        <Button
            android:id="@+id/get_listposition"
            style="@style/TextStyle"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/navigation_list_position" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableforbutton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:stretchColumns="*">

    </TableLayout>

</LinearLayout>
